# ld48

./: .gitignore  Cargo.toml  LICENSE.md  Makefile.toml  README.md  index.html
.github/workflows/: release.yaml  release.yml
assets/: character.aseprite  slime_icon.aseprite
plugins/sf_core/: Cargo.toml
plugins/sf_core/src/: colors.rs  dims.rs  entity.rs  game_over_ui.rs  input.rs  levels.rs  lib.rs  map.rs  player.rs  render_pipeline.rs  ui.rs
plugins/sf_core/src/render/: mod.rs  render_pipeline.rs  render_pipeline_web.rs  render_texture.rs  setup_rendering.rs
plugins/sf_core/src/render/shaders/: sprite.frag  sprite_web.frag  sprite_web.vert
plugins/sf_game/: Cargo.toml
plugins/sf_game/src/: despawner.rs  lib.rs  lighting.rs  sand_updater.rs  sink_consumption.rs  spawner_emission.rs  timed_despawner.rs
plugins/sf_menu/: Cargo.toml
plugins/sf_menu/src/: levels.rs  lib.rs  lighting.rs
plugins/sf_player/: Cargo.toml
plugins/sf_player/src/: animate_player.rs  calculate_player_movement.rs  game_over_tracker.rs  lib.rs  lighting_decay.rs  player_sink.rs  spawn_player.rs  sync_transform_to_pos.rs  update_player_ui.rs
src/: main.rs
