[package]
name = "ld48"
version = "0.1.0"
authors = ["William Hart <hart.wl@gmail.com>"]
edition = "2018"

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/bevy_wgpu",
]

[dependencies]
anyhow = "1"
bevy = { version = "0.5", default-features = false }

sf_core = { path = "plugins/sf_core" }
sf_game = { path = "plugins/sf_game" }
sf_player = { path = "plugins/sf_player" }
