[package]
name = "ld48"
version = "0.1.1"
authors = ["William Hart <hart.wl@gmail.com>"]
edition = "2018"

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/bevy_wgpu",
    "bevy_kira_audio/ogg",
]

[dependencies]
anyhow = "1"
bevy = { version = "0.5", default-features = false }
bevy_kira_audio = "0.4"

sf_core = { path = "plugins/sf_core" }
sf_game = { path = "plugins/sf_game" }
sf_player = { path = "plugins/sf_player" }
