[package]
name = "ld48"
version = "1.1.0"
authors = ["William Hart <hart.wl@gmail.com>"]
edition = "2018"

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy_kira_audio/ogg"
]

native = [
    "bevy/bevy_wgpu",
]

web = [
    "bevy_webgl2",
]

dev = [
    "bevy/dynamic",
    "native",
]

[dependencies]
bevy = { version = "0.5", default-features = false }
bevy_kira_audio = "0.4"
bevy_webgl2 = { version = " 0.5.0", optional = true }

sf_core = { path = "plugins/sf_core" }
sf_game = { path = "plugins/sf_game" }
sf_player = { path = "plugins/sf_player" }

[build-dependencies]
embed-resource = "1.4"