[package]
name = "sf_core"
version = "0.1.0"
authors = ["William Hart <hart.wl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/bevy_wgpu",
]

[dependencies]
anyhow = "1"
bevy = { version = "0.5", default-features = false }
