[package]
name = "sf_core"
version = "0.1.0"
authors = ["William Hart <hart.wl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/bevy_wgpu",
    "bevy_kira_audio/ogg"
]

[dependencies]
bevy = { version = "0.5", default-features = false }
bevy_kira_audio = "0.4"
rand = { version = "0.8", default-features = false }