[package]
name = "sf_game"
version = "0.1.0"
authors = ["William Hart <hart.wl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_audio",
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/bevy_wgpu",
]

[dependencies]
bevy = { version = "0.5", default-features = false }
rand = { version = "0.8", default-features = false }

sf_core = { path = "../sf_core" }
sf_player = { path = "../sf_player" }
